--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,136 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  
+  <main>
+    <!-- 헤드 -->
+    <header>
+      <a class="logo" href="#">
+        <img src="img/logo.png" alt="로고">
+      </a>
+      <div class="mainmenu">
+        <a href="#">탑</a>
+        <a href="#">아우터</a>
+        <a href="#">팬츠</a>
+        <a href="#">악세서리</a>
+        <div class="submenu">
+          <ul>
+            <li>블라우스</li>
+            <li>티</li>
+            <li>셔츠</li>
+            <li>니트</li>
+          </ul>
+          <ul>
+            <li>자켓</li>
+            <li>코트</li>
+            <li>가디건</li>
+            <li>머플러</li>
+          </ul>
+          <ul>
+            <li>청바지</li>
+            <li>짧은바지</li>
+            <li>긴바지</li>
+            <li>레깅스</li>
+          </ul>
+          <ul>
+            <li>귀고리</li>
+            <li>목걸이</li>
+            <li>반지</li>
+            <li>팔찌</li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <!-- 슬라이드 -->
+    <div class="slide">
+      <a href="#">
+        <img src="img/slide1.jpg" alt="slide1">
+      </a>
+      <a href="#">
+        <img src="img/slide2.jpg" alt="slide2">
+      </a>
+      <a href="#">
+        <img src="img/slide3.jpg" alt="slide3">
+      </a>
+    </div>
+    <!-- 콘텐츠(탭메뉴, 이미지 두개) -->
+    <div class="contents">
+      <ul class="tabMenu"> <!-- tabMenu:공지사항과 갤러리 묶어줌 -->
+        <li class="active">
+          <a href="#">공지사항</a>
+          <div class="tabBG notice">
+            <ul>
+              <li>
+                <a href="#">신규회원 대상 할인 이벤트 안내
+                  <span>2020.11.23</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">S/S 시즌 신규 의류 신상품 안내
+                  <span>2020.11.23</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">반품/환불 규정에 대해 알려드립니다
+                  <span>2020.11.23</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">3월 재입고 품목을 알려드립니다
+                  <span>2020.11.23</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="#">갤러리</a>
+          <div class="tabBG gallery">
+            <ul>
+              <li><a href="#"><img src="img/gallery1.jpg" alt="갤러리1"></a></li>
+              <li><a href="#"><img src="img/gallery2.jpg" alt="갤러리2"></a></li>
+              <li><a href="#"><img src="img/gallery3.jpg" alt="갤러리3"></a></li>
+            </ul>
+          </div>
+        </li>
+        </ul>
+      <divc class="banner">
+        <a href="#">
+          <img src="img/banner_img.jpg" alt="banner">
+        </a>
+      </div>
+      <div class="direct">
+        <a href="#">
+          <img src="img/shortcut_img.jpg" alt="direct">
+        </a>
+      </div>
+    </div>
+    <!-- footer -->
+    <footer>
+      <div>
+        <a href="#">
+          <img src="img/logo2.png" alt="logo2">
+        </a>
+      </div>
+      <div>
+        COPYRIGHT © by WEBDESIGN. ALL RIGHTS RESERVED
+      </div>
+      <div>
+        <a href="#"><img src="img/sns1.png" alt="sns1"></a>
+        <a href="#"><img src="img/sns2.png" alt="sns2"></a>
+        <a href="#"><img src="img/sns3.png" alt="sns3"></a>
+      </div>
+    </footer>
+    <!-- 팝업창 -->
+    <div class="popupWrap">
+      <div class="popup">
+        <h1>신규회원 대상 이벤트 안내</h1>
+        <p>
+          즐거운 쇼핑 환경을 위해 항상 노력하는 JUST 쇼핑몰입니다.
+          고객님들께 한 단계 더 나아가 보답하는 ON쇼핑몰이 되고자신규회원 대상 10% 할인 이벤트를 실시하고 있습니다. 웹과 모바일에서 모두 이용 가능하며, 수준 높은 서비스를 위해 앞으로도 꾸준히 노력할 것을 약속드립니다.
+        </p>
+        <button class="btn">닫기</button>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
