--- a/index2.html
+++ b/index2.html
@@ -52,12 +52,15 @@
     <div class="slide">
       <a href="#">
         <img src="img/slide1.jpg" alt="slide1">
+        <span class="imgtext">쇼핑몰 홈페이지 새단장</span>
       </a>
       <a href="#">
         <img src="img/slide2.jpg" alt="slide2">
+        <span class="imgtext">이달의 쇼핑 이벤트</span>
       </a>
       <a href="#">
         <img src="img/slide3.jpg" alt="slide3">
+        <span class="imgtext">장바구니 할인 이벤트</span>
       </a>
     </div>
     <!-- 콘텐츠(탭메뉴, 이미지 두개) -->
@@ -101,7 +104,7 @@
           </div>
         </li>
         </ul>
-      <divc class="banner">
+      <div class="banner">
         <a href="#">
           <img src="img/banner_img.jpg" alt="banner">
         </a>
@@ -115,7 +118,7 @@
     <!-- footer -->
     <footer>
       <div>
-        <a href="#">
+        <a class="logo2" href="#">
           <img src="img/logo2.png" alt="logo2">
         </a>
       </div>
@@ -129,8 +132,8 @@
       </div>
     </footer>
     <!-- 팝업창 -->
-    <div class="popupWrap">
-      <div class="popup">
+    <div id="modalWrap">
+      <div class="modal">
         <h1>신규회원 대상 이벤트 안내</h1>
         <p>
           즐거운 쇼핑 환경을 위해 항상 노력하는 JUST 쇼핑몰입니다.
